Talent demo mostly finished. Also fixed the bootstrap header overlapping the page.

--- a/css/main.css
+++ b/css/main.css
@@ -25,10 +25,8 @@
 .topnav {
 	padding: 10px;
 	height: 140px;
-    background-color: #333;
-}
-.topnav button {
-	
+	background-color:#333;
+		
 }
 
 /* The sidebar menu */
