--- a/styles.css
+++ b/styles.css
@@ -26,9 +26,6 @@
 	height: 140px;
     background-color: #333;
 }
-.topnav button {
-	
-}
 
 /* The sidebar menu */
 .sidenav {
